Struktur geändert, book button wird noch erweitert

--- a/src/main/resources/static/css/eventList.css
+++ b/src/main/resources/static/css/eventList.css
@@ -158,6 +158,11 @@ body {
     padding-top: 1rem;
 }
 
+.book-section {
+    border-top: 1px solid #ddd;
+    padding-top: 1rem;
+}
+
 .modal-footer button {
     min-width: 100px;
 }
