--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -95,46 +95,45 @@
                     </div>
 
                     <!-- Location fields -->
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="street" class="form-label">Street</label>
-                        <input type="text" id="street" name="street" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid street.
+                    <div class="row">
+                        <div class="col-md-8 mb-3">
+                            <label for="street" class="form-label">Street</label>
+                            <input type="text" id="street" name="street" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid street.</div>
+                        </div>
+
+                        <div class="col-md-4 mb-3">
+                            <label for="houseNumber" class="form-label">House Number</label>
+                            <input type="text" id="houseNumber" name="houseNumber" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid house number.</div>
                         </div>
                     </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="houseNumber" class="form-label">House Number</label>
-                        <input type="text" id="houseNumber" name="houseNumber" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid house number.
+
+                    <div class="row">
+                        <div class="col-md-8 mb-3">
+                            <label for="city" class="form-label">City</label>
+                            <input type="text" id="city" name="city" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid city.</div>
+                        </div>
+
+                        <div class="col-md-4 mb-3">
+                            <label for="postalCode" class="form-label">Postal Code</label>
+                            <input type="text" id="postalCode" name="postalCode" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid postal code.</div>
                         </div>
                     </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="city" class="form-label">City</label>
-                        <input type="text" id="city" name="city" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid city.
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="state" class="form-label">State</label>
+                            <input type="text" id="state" name="state" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid state.</div>
                         </div>
-                    </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="postalCode" class="form-label">Postal Code</label>
-                        <input type="text" id="postalCode" name="postalCode" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid postal code.
-                        </div>
-                    </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="state" class="form-label">State</label>
-                        <input type="text" id="state" name="state" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid state.
-                        </div>
-                    </div>
-                    <div class="mb-3 d-flex flex-column">
-                        <label for="country" class="form-label">Country</label>
-                        <input type="text" id="country" name="country" class="form-control" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid country.
+
+                        <div class="col-md-6 mb-3">
+                            <label for="country" class="form-label">Country</label>
+                            <input type="text" id="country" name="country" class="form-control" required>
+                            <div class="invalid-feedback">Please enter a valid country.</div>
                         </div>
                     </div>
 
