price max in html eingestellt & edit section verschwendet direkt nach dem canceln

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -148,7 +148,7 @@
 
                     <div class="mb-3 d-flex flex-column">
                         <label for="price" class="form-label">Price (€)</label>
-                        <input type="number" id="price" name="price" step="0.01" min="0.00" class="form-control" required>
+                        <input type="number" id="price" name="price" step="0.01" min="0.00" max="99999999.99" class="form-control" required>
                         <div class="invalid-feedback">
                             Please enter a valid price.
                         </div>
