status design in eventlist angepasst

--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -103,7 +103,7 @@
                     <h5 class="card-title"></h5>
                     <p class="card-text mb-1"><strong>Location:</strong> <span class="card-location"></span></p>
                     <p class="card-text mb-2"><strong>Price:</strong> <span class="card-price"></span></p>
-                    <p class="card-text"><small class="card-status"></small></p>
+                    <p class="card-text"><small class="card-status badge"></small></p>
                 </div>
             </div>
             <div class ="col-md-2 d-flex justify-content-end align-items-center" >
@@ -133,7 +133,7 @@
                     <p><strong>Location:</strong> <span class="d-location"></span></p>
                     <p><strong>Date:</strong> <span class="d-date"></span></p>
                     <p><strong>Price:</strong> <span class="d-price"></span></p>
-                    <p><strong>Status:</strong> <span class="d-status"></span></p>
+                    <p><strong>Status:</strong> <span class="d-status badge"></span></p>
                     <p class="d-cancelreason" style="display:none;"><strong>Cancellation Reason:</strong> <span></span></p>
                 </div>
                 <div class="modal-footer">
