Search function changed to Name and Location in Eventlist and Eventname, Name, Email and Location in Bookinglist

--- a/src/main/resources/static/css/eventList.css
+++ b/src/main/resources/static/css/eventList.css
@@ -247,7 +247,7 @@ body {
 
 /* images in edit event form for next step */
 .readonly-file {
-    pointer-events: none !important;   /* disable Mouse-Interaktion */
+    pointer-events: none !important;
     opacity: 0.6;
     cursor: not-allowed !important;
 }
