--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -63,7 +63,7 @@
                     type="text"
                     id="searchInput"
                     class="search-input"
-                    placeholder="Search events by name, location or description..."
+                    placeholder="Search events by name or location"
                     onkeyup="filterEvents()">
             <span id="searchCount" class="search-count"></span>
         </div>
